resources/stylesheets/dimensions.less
@banner-top-height: 0.1rem;
@custom-menu-top-height: 2.5rem;
@menu-top-height: 4rem;
@menu-top-mobile-height: 3.125rem;
@menu-top-items-margin: 1rem;
@navigation-main-width: 18.78rem;
@sitetools-main-width: 18.78rem;
@navigation-tabs-height: 3.75rem;
@sitetools-tabs-height: 3.75rem;
@bs-content-width: 61.25rem;//980px;

